# Robot-Navigation-Workshop

./: .gitignore  CMakeLists.txt  README.md  main.cpp  package.json
cmake/: FindOpenCV.cmake  Findplayerc.cmake
configures/: room_coordinates.txt  rooms.cfg  rooms.world
general-use/: run_stage.sh
robot-client/: CMakeLists.txt  README.md  main.cpp
robot-client -simple/: main.cpp
robot-client -simple/cmake/: Findplayerc++.cmake
robot-client -simple/src/Resources/: ChronoTime.cpp  GlobalsDefines.h  MapGenerator.cpp  RoomsContainer.h
robot-client -simple/src/Robot/: RobotPlanner.h
robot-client-simple/: CMakeLists.txt
robot-client-simple/src/Missions/: CalculateTime.cpp
robot-client-simple/src/PathPlanning/: GridMap.cpp  GridMapValidityChecker.h
robot-client-simple/src/Resources/: MapGenerator.h  Room.h
robot-client-simple/src/Robot/: RobotWrapper.cpp
robot-client/Client/: Client.cpp  Client.h
robot-client/cmake/: FindOpenCV.cmake  Findplayerc++.cmake
robot-client/configurations/: fromServer.cfg  fromServer.world  room_coordinates.txt  rooms.world  stage.world
robot-client/configures/: room_coordinates.txt
robot-client/server/: Helper.cpp  Helper.h  Server.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
robot-client/src/Behavior/: Behavior.h  Mission.h
robot-client/src/Behavior/Factory/: RobotBehaviorFactory.cpp  RobotMissionFactory.cpp  RobotMissionFactory.h
robot-client/src/Behavior/MessageBehavior/: VoiceMessageBehavior.cpp  VoiceMessageBehavior.h
robot-client/src/Behavior/Missions/: NavigationMission.cpp  NavigationMission.h
robot-client/src/Behavior/RobotBehavior/: EnterRoomBehavior.cpp  EnterRoomBehavior.h  ExitRoomBehavior.cpp  ExitRoomBehavior.h  HallNavigateBehavior.cpp  HallNavigateBehavior.h  LinearNavigation.cpp  LinearNavigation.h  RobotBehavior.h  RotationBehavior.cpp  RotationBehavior.h
robot-client/src/Behavior/behaviour-functors/: AvoidObstacle.cpp  AvoidObstacle.h  LinearNavigation.cpp  LinearNavigation.h  RotateRobot.cpp  RotateRobot.h
robot-client/src/Client/: WebSocketClient.cpp  WebSocketClient.h
robot-client/src/Missions/: CalculateTime.cpp  CalculateTime.h  Mission.h
robot-client/src/Missions/Inform-Missions/: Inform.cpp  Inform.h
robot-client/src/Missions/factories/: MissionFactory.h
robot-client/src/Missions/factories/nav-mission-factory/: NavigationMissionsFactory.cpp  NavigationMissionsFactory.h
robot-client/src/Missions/navigation-missions/: R2Exit.cpp  R2Exit.h  R2R.cpp  R2R.h
robot-client/src/Navigate/: Navigation.h  RoomToRoomNavigation.cpp  RoomToRoomNavigation.h
robot-client/src/PathPlanning/: GridMap.h  GridMapValidityChecker.cpp  GridMapValidityChecker.h  Route.cpp  Route.h
robot-client/src/PathPlanning/Algorithm/: RRTStarAlgorithm.cpp
robot-client/src/Resources/: ChronoTime.h  GlobalsDefines.h  MapGenerator.h  Room.cpp  Room.h  RoomsContainer.cpp  RoomsContainer.h  RoomsHandler.cpp
robot-client/src/Robot/: Colors.h  RobotCLI.cpp  RobotCLI.h  RobotPathProducer.cpp  RobotPathProducer.h  RobotPlanner.cpp  RobotPlanner.h  RobotWrapper.cpp  RobotWrapper.h
robot-client/src/Robot/fast_calc_path/: PathCreator.cpp  PathCreator.h  RobotPathProducer.cpp  RobotPathProducer.h
robot-web/: package.json
robot-web/backend/: MapAndRoom.json  app.js  package-lock.json  package.json  robot.json
robot-web/backend/config/: .env.deploy  .env.local
robot-web/backend/controllers/: mapController.js  robotController.js  robotServerController.js  serverController.js  stageController.js
robot-web/backend/models/: mapModel.js  robotModel.js
robot-web/backend/public/: asset-manifest.json  index.html
robot-web/backend/routes/: map.js  robot.js  robotServer.js  server.js  stage.js
robot-web/backend/services/: WebSocketClient.js  WebSocketServer.js
robot-web/desktop-app/: electron-builder.json  package-lock.json  package.json
robot-web/desktop-app/public/: index.html
robot-web/desktop-app/src/: App.js
robot-web/frontend/: package-lock.json  package.json
robot-web/frontend/public/: index.html
robot-web/frontend/src/: App.css  App.js
src/: DataStructure.h  MapGenerator.cpp  MapGenerator.h  MapGenrator.cpp  MapGenrator.h  Navigation.cpp  Navigation.h  Room.h  Route.cpp  Route.h
src/Algorithm/: Algorithm.h  Pixel.h
src/Behaivor/: Behaivor.h
src/Behaivor/Factory/: RobotCommandFactory.h
src/Behaivor/RobotBehaivor/: EnterRoomBehaivor.cpp  EnterRoomBehaivor.h  ExitRoomBehaivor.cpp  ExitRoomBehaivor.h  HallNavigationBehaivor.cpp  HallNavigationBehaivor.h
src/Behavior/: Behavior.h  Mission.h
src/Behavior/Factory/: RobotBehaviorFactory.cpp  RobotBehaviorFactory.h  RobotMissionFactory.h
src/Behavior/MessageBehavior/: MessageBehavior.h  VoiceMessageBehavior.cpp  VoiceMessageBehavior.h
src/Behavior/RobotBehaivor/: EnterRoomBehavior.cpp  EnterRoomBehavior.h  ExitRoomBehavior.cpp  ExitRoomBehavior.h  HallNavigateBehavior.cpp  HallNavigateBehavior.h
src/Behavior/RobotBehavior/: DirectPathBehaviour.cpp  DirectPathBehaviour.h  EnterRoomBehavior.cpp  EnterRoomBehavior.h  ExitRoomBehavior.h  HallNavigateBehavior.cpp  HallNavigateBehavior.h  RobotBehavior.h  RotationBehavior.cpp  RotationBehavior.h
src/Commands/: Assignment.cpp  Assignment.h  Mission.h
src/Commands/Factory/: RobotCommandFactory.cpp  RobotMissionFactory.h
src/Commands/RobotCommands/: RobotCommand.h  navigateToCenterRoomCommand.cpp  navigateToCenterRoomCommand.h  navigateToExitCommand.cpp  navigateToExitCommand.h  navigateToRoomEntryCommand.cpp  navigateToRoomEntryCommand.h
src/Navigate/: Navigatable.h  Navigation.cpp  Navigation.h
src/PathPlanning/: GridMap.cpp  GridMap.h  GridMapValidityChecker.cpp  GridMapValidityChecker.h  Route.cpp  Route.h
src/PathPlanning/Algorithm/: AStarAlgorithm.cpp  AStarAlgorithm.h  Algorithm.cpp  Algorithm.h  Pixel.cpp  RRTStarAlgorithm.cpp  (+1 more)
src/Resources/: GlobalsDefines.h  MapGenerator.cpp  MapGenerator.h  Room.cpp  Room.h  RoomsHandler.cpp  RoomsHandler.h
src/Robot/: RobotPlanner.cpp  RobotPlanner.h  RobotWrapper.cpp  RobotWrapper.h
src/server/: Server.cpp
(+370 files in other folders)
